fixed title cutoff bug

--- a/stylesheets/pagestyle2.css
+++ b/stylesheets/pagestyle2.css
@@ -32,7 +32,6 @@ code {
     padding-right: 6px;
 }
 .body-container {
-    height: 100%;
     container-type: inline-size;
 }
 .supporting-header {
@@ -100,7 +99,6 @@ span {
     line-height: 1.12;
 }
 .gradient-title {
-    width: max-content;
 }
 @container (min-width: 10cm) {
     .webpage-title {
